<resources>
    <string name="app_name" translatable="false">Draw Battle</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="start" translatable="true">Start</string>
    <string name="saved" translatable="true">Saved</string>
    <string name="light" translatable="true">Light theme</string>
    <string name="dark" translatable="true">Dark theme</string>
    <string name="acc" translatable="true">Account:</string>
    <string name="aboutName" translatable="true">About development:</string>
    <string name="aboutText" translatable="true">&#160;&#160;&#160;&#160;This app was created in the course of studying at Samsung IT School. Thanks to Konstantin Aktybaev for training in general, and for help on all issues in particular. You can find our project on GitHub:\n<a href="https://github.com/Keworker">https://github.com/Keworker</a></string>
    <string name="back" translatable="true">Back</string>
    <string name="friendsW" translatable="true">Play with friends</string>
    <string name="randomW" translatable="true">Play with random peoples</string>
    <string name="editTextHint" translatable="true">Write a short story</string>
    <string name="question" translatable="true">Are you sure want to log out?</string>
    <string name="yes" translatable="true">Yes</string>
    <string name="no" translatable="true">No</string>
    <string name="mainGame" translatable="true">Complicated story</string>
    <string name="drawTournament" translatable="true">Draw Tournament</string>
    <string name="singOut" translatable="true">Log out with Google</string>
    <string name="timeStop" translatable="true">Time Stop!</string>
    <string name="googleTextError" translatable="true">You are not signed in to your Google account</string>
    <string name="googleButtonError" translatable="true">Log in</string>
    <string name="wait" translatable="true">Please, wait</string>
    <string name="toastSticker" translatable="true">Sorry, we can not set this size for your sticker</string>
    <string name="exit" translatable="true">Exit</string>
    <string name="nick" translatable="false">Nickname</string>
    <string name="accept" translatable="true">Accept</string>
    <string name="drawIt">Draw It!</string>
</resources>