<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings"
    android:background="@color/settings_background">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/topicText"
            android:text="@string/settings"
            android:layout_gravity="left"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/theme">
                <RadioButton
                    android:text="@string/light"
                    style="@style/normalText"
                    android:id="@+id/lightTheme"
                    android:checked="true"/>

                <RadioButton
                    android:text="@string/dark"
                    style="@style/normalText"
                    android:id="@+id/darkTheme"
                    android:checked="false"/>
            </RadioGroup>

            <TextView
                style="@style/normalText"
                android:text="@string/acc"
                android:textColor="@color/topic_text"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signOut"
                style="@style/Buttons"
                android:text="@string/singOut"/>

            <TextView
                style="@style/normalText"
                android:text="@string/aboutName"
                android:textColor="@color/topic_text"/>

            <TextView
                style="@style/normalText"
                android:id="@+id/aboutDev"
                android:text="@string/aboutText"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|center_horizontal">
        <Button
            style="@style/Buttons"
            android:id="@+id/back"
            android:text="@string/back"/>
    </LinearLayout>
</LinearLayout>