<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu"
    android:background="@color/menu_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4">
        <!--Здесь будет картинка с логотипом приложения и текстом-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            style="@style/Buttons"
            android:text="@string/settings"
            android:id="@+id/settings"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Buttons"
            android:text="@string/start"
            android:id="@+id/start"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Buttons"
            android:text="@string/saved"
            android:id="@+id/saved"/>
    </LinearLayout>
</LinearLayout>